
* As specified in ISO C23, the assert macro is defined to take variable
  arguments to support expressions with a comma inside a compound
  literal initializer not surrounded by parentheses.

* The C23 typedef names long_double_t, _Float32_t, _Float64_t, and (on
  platforms supporting _Float128) _Float128_t, introduced in TS
  18661-3:2015, have been added to <math.h>.

Deprecated and removed features, and other changes affecting compatibility:

* Support for dumped heaps has been removed - malloc_set_state() now always
  returns the error code -1.

* The uimaxabs function has been renamed to umaxabs, following a change
  to the name of that function in ISO C2Y.  The old function continues
  to exist as a compatibility symbol for old binaries.

Changes to build and runtime requirements:

  [Add changes to build and runtime requirements here]

Security related changes:

The following CVEs were fixed in this release, details of which can be
found in the advisories directory of the release tarball:

  [The release manager will add the list generated by
  scripts/process-advisories.sh just before the release.]

The following bugs were resolved with this release:

  [The release manager will add the list generated by
  scripts/list-fixed-bugs.py just before the release.]

Version 2.42

Major new features:

* The following ISO C23 function families (introduced in TS
  18661-4:2015) are now supported in <math.h>.  Each family includes
  functions for float, double, long double, _FloatN and _FloatNx, and a
  type-generic macro in <tgmath.h>.

  - Power and absolute-value functions: compoundn, pown, powr, rootn,
    rsqrt.

* On Linux, the pthread_gettid_np function has been added.

* The ISO C2Y family of unsigned abs functions, i.e. uabs, ulabs,
  ullabs, and uimaxabs, is now supported.

* On Linux, the <termios.h> interface now supports arbitrary baud rates;
  speed_t is redefined to simply be the baud rate specified as an